--- a/front_end/index.html
+++ b/front_end/index.html
@@ -29,7 +29,7 @@
             .plano_1 img {
                 background-color: hsl(0, 0%, 25%);
                 background-image: "video.png";
-                transform: rotate(90deg);
+                flex-grow: 1;
             }
             .velocimetro {
                 padding: 15px;
@@ -61,7 +61,7 @@
         </div>
 
         <div class="plano plano_1">
-            <img src="http://192.168.15.3:4747/video" onerror="this.onerror=null; this.src='video.jpg'">
+            <img src="./video" onerror="this.onerror=null; this.src='video.jpg'">
         </div>
 
         <div class="plano plano_2">
@@ -123,7 +123,7 @@
                 payload = build_payload()
                 console.log(payload)
 
-                fetch('http://127.0.0.1:5000/', {
+                fetch('./api', {
                     method: 'POST',
                     headers: {'Content-Type': 'application/json'},
                     body: JSON.stringify(payload)
